@@ -1,16 +1,15 @@
 package com.example.partystarter.service;
 
-import com.example.partystarter.model.Drink;
 import com.example.partystarter.model.response.GetDrinksResponse;
 import com.example.partystarter.model.response.GetDrinksResponseDrink;
 import com.example.partystarter.repo.DrinkRepository;
 import com.example.partystarter.utils.ConvertUtils;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 
 @Slf4j
@@ -20,13 +19,13 @@ public class DrinksService {
 
     private final DrinkRepository drinkRepository;
 
+    @Cacheable(cacheNames = "drinks")
     public GetDrinksResponse getDrinksForIngredients(List<String> ingredientNames) {
-        List<Drink> drinks = drinkRepository.findDistinctByIngredientsIngredientNameIn(ingredientNames);
-
-        List<GetDrinksResponseDrink> responseDrinks = drinks
+        List<GetDrinksResponseDrink> responseDrinks = drinkRepository
+                .findDistinctByIngredientsIngredientNameIn(ingredientNames)
                 .stream()
                 .map(ConvertUtils::mapDrinksToResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return new GetDrinksResponse(responseDrinks);
     }
@@ -36,7 +35,7 @@ public class DrinksService {
                 .findAll()
                 .stream()
                 .map(ConvertUtils::mapDrinksToResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return new GetDrinksResponse(responseDrinks);
     }
